# Converter

./: .gitignore  README.md  config.json  pyproject.toml
app/: art_styles.py  core.py  gui.py  main.py
app/gui_components/: __init__.py  app_functions.py  app_styles.py  main_app.py  ui_builder.py
